# json_macros

./: .travis.yml  Cargo.toml  LICENSE.txt  README.markdown  README.md
examples/: foo.rs  kitchen_sink.rs
src/: lib.rs  macro.rs  plugin.rs
tests/: tests.rs
