[package]
authors = [
  "Tom Jakubowski <tom@crystae.net>",
  "Yohaï Berreby <yohaiberreby@gmail.com>"
]
description = "Convenience macros for constructing JSON objects from literals.\n"
keywords = ["json", "macros", "plugins", "serde", "serialization"]
license = "MIT"
name = "json_macros"
readme = "README.md"
repository = "https://github.com/tomjakubowski/json_macros"
version = "0.3.0"

[dependencies]
serde_json = "0.6.0"

[[example]]
name = "kitchen-sink"
path = "examples/kitchen_sink.rs"

[lib]
name = "json_macros"
path = "src/lib.rs"
plugin = true

[[test]]
name = "tests"
